[package]
name = "mqtli"
version = "0.12.0"
edition = "2021"
description = "MQTT multi-topic and payload converting cli client"
license = "Apache-2.0"
repository = "https://github.com/kaans/mqtli"
readme = "README.adoc"
rust-version = "1.81.0"

[[bin]]
name = "mqtli"
path = "src/main.rs"

[dependencies]
mqtlib = { path = "crates/mqtlib" }
clap = { version = "4.5.47", features = ["derive", "env"] }
derive-getters = "0.5.0"
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "sync", "signal"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.30"
thiserror = "2.0.16"
validator = { version = "0.20.0", features = ["derive"] }
base64 = "0.22.1"
rumqttc = { git = "https://github.com/bytebeamio/rumqtt.git", rev = "431be1b", features = ["websocket"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
colored = "3.0.0"
chrono = "0.4.41"

[build-dependencies]
built = "0.8.0"

[workspace]
