[package]
name = "mqtli"
version = "0.7.0"
edition = "2021"
description = "MQTT multi-topic and payload converting cli client"
license = "Apache-2.0"
repository = "https://github.com/kaans/mqtli"
readme = "../../README.adoc"
rust-version = "1.81.0"

[[bin]]
name = "mqtli"
path = "src/main.rs"

[dependencies]
mqtlib = { path = "../mqtlib" }
clap = { version = "4.5.23", features = ["derive", "env"] }
derive-getters = "0.5.0"
anyhow = "1.0.94"
log = "0.4.22"
simplelog = { version = "0.12.2", features = ["paris"] }
tokio = { version = "1.42.0", features = ["macros", "rt", "rt-multi-thread", "sync", "signal"] }
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.30"
thiserror = "1.0.69"
validator = { version = "0.19.0", features = ["derive"] }

[build-dependencies]
built = "0.7.5"
